// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":false,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":false,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":false,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":null,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":null,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":null,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":true,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":true,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":true,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 py-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\">
    <div class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"autofix\\" color=\\"juniper\\"></zicon-stub>
      <div class=\\"text-sm\\">
        DeepSource Autofix

        <!---->
      </div>
    </div>
    <div class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </div>
  </div>
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixEnabled":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":false,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":false,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":false,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":null,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":null,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":null,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":true,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":true,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":true,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 py-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/apps/None/installations/new/permissions?target_id=40287229&amp;state=Ymlmcm9zdA==\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"autofix\\" color=\\"juniper\\"></zicon-stub>
      <div class=\\"text-sm\\">
        DeepSource Autofix

        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/apps/None/installations/new/permissions?target_id=40287229&amp;state=Ymlmcm9zdA==\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA==","autofixEnabled":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":"https://github.com/apps/None/installations/new/permissions?target_id=40287229&state=Ymlmcm9zdA=="} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":false,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":false,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":false,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":null,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":null,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":null,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":true,"autofixAvailable":false} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":true,"autofixAvailable":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":true,"autofixAvailable":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 py-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\">
    <div class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"autofix\\" color=\\"juniper\\"></zicon-stub>
      <div class=\\"text-sm\\">
        DeepSource Autofix

        <!---->
      </div>
    </div>
    <div class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </div>
  </div>
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null,"autofixEnabled":true} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs","autofixInstallationUrl":null} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;

exports[`renders VcsConnections with all prop options: {"vcsInstallationUrl":"https://github.com/organizations/deepsourcelabs/settings/installations/7054915","vcsProviderDisplay":"GitHub","vcsProviderIcon":"github","teamName":"deepsourcelabs"} 1`] = `
"<div class=\\"rounded-md border border-ink-200 bg-ink-300 py-4\\">
  <p class=\\"px-4 pb-4 text-xs uppercase leading-5 tracking-wider text-vanilla-400\\">
    VCS provider connections
  </p>
  <div class=\\"flex justify-between border-t border-ink-200 px-4 pt-4\\"><a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"group flex items-center gap-x-2.5\\">
      <zicon-stub icon=\\"github\\"></zicon-stub>
      <div class=\\"text-sm\\">
        GitHub
        <span class=\\"text-vanilla-400\\">— deepsourcelabs</span>
        <zicon-stub icon=\\"arrow-up-right\\" class=\\"inline group-hover:ml-0.5\\"></zicon-stub>
      </div>
    </a> <a href=\\"https://github.com/organizations/deepsourcelabs/settings/installations/7054915\\" class=\\"flex items-center gap-x-1 rounded-sm border border-ink-50 bg-ink-200 px-2 hover:opacity-80\\">
      <zicon-stub icon=\\"check\\"></zicon-stub> <span class=\\"text-sm text-vanilla-400\\">Installed</span>
    </a></div>
  <!---->
</div>"
`;
